--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="fundo">#191E22</color>
-    <color name="fundoMenu">#2D141414</color>
+    <color name="fundoMenu">#66000000</color>
+    <color name="fundoCardProfile">#80000000</color>
+    <color name="textSecondary">#B9B9B9</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_A200">#FF40C4FF</color>
