insert right side icon

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,9 @@
         <item
             android:id="@+id/nav_recipes"
             android:icon="@drawable/ic_menu_recipes"
-            android:title="@string/menu_recipes" />
+            android:title="@string/menu_recipes"
+            android:background="@drawable/ic_cloud"/>
+
         <item
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_menu_history"
@@ -31,4 +33,18 @@
             android:icon="@drawable/ic_menu_settings"
             android:title="@string/menu_settings" />
     </group>
+
+    <group android:id="@+id/nav_footer">
+        <item
+            android:id="@+id/nav_footer_1"
+            android:icon="@drawable/ic_cloud"
+            android:title="Nuvem" />
+        <item
+            android:id="@+id/nav_footer_2"
+            android:icon="@drawable/ic_darkmode"
+            android:title="Dark Mode" />
+    </group>
+
+
+
 </menu>
