--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -2,49 +2,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
-
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_home"
-            android:title="Home" />
-        <item
-            android:id="@+id/nav_recipes"
-            android:icon="@drawable/ic_menu_recipes"
-            android:title="@string/menu_recipes"
-            android:background="@drawable/ic_cloud"/>
-
-        <item
-            android:id="@+id/nav_history"
-            android:icon="@drawable/ic_menu_history"
-            android:title="@string/menu_history" />
-        <item
-            android:id="@+id/nav_user"
-            android:icon="@drawable/ic_menu_user"
-            android:title="@string/menu_user" />
-
-        <item
-            android:id="@+id/nav_storage"
-            android:icon="@drawable/ic_menu_storage"
-            android:title="@string/menu_storage" />
-
-        <item
-            android:id="@+id/nav_setting"
-            android:icon="@drawable/ic_menu_settings"
-            android:title="@string/menu_settings" />
-    </group>
-
-    <group android:id="@+id/nav_footer">
-        <item
-            android:id="@+id/nav_footer_1"
-            android:icon="@drawable/ic_cloud"
-            android:title="Nuvem" />
-        <item
-            android:id="@+id/nav_footer_2"
-            android:icon="@drawable/ic_darkmode"
-            android:title="Dark Mode" />
-    </group>
-
-
-
+    <item
+        android:id="@+id/nav_home"
+        android:icon="@drawable/ic_menu_home"
+        android:title="Início" />
+    <item
+        android:id="@+id/nav_recipes"
+        android:icon="@drawable/ic_menu_recipes"
+        android:title="@string/menu_recipes" />
+    <item
+        android:id="@+id/nav_history"
+        android:icon="@drawable/ic_menu_history"
+        android:title="@string/menu_history" />
+    <item
+        android:id="@+id/nav_user"
+        android:icon="@drawable/ic_menu_user"
+        android:title="@string/menu_user" />
+    <item
+        android:id="@+id/nav_storage"
+        android:icon="@drawable/ic_menu_storage"
+        android:title="@string/menu_storage" />
+    <item
+        android:id="@+id/nav_setting"
+        android:icon="@drawable/ic_menu_settings"
+        android:title="@string/menu_settings" />
 </menu>
