--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,12 @@
     tools:openDrawer="start">
 
 
+    <include
+        android:id="@+id/include2"
+        layout="@layout/app_bar_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -18,7 +24,163 @@
         android:background="@color/fundoMenu"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer"
+        app:theme="@style/myNavigationDrawerStyle">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/transparente">
+
+            <View
+                android:layout_width="248dp"
+                android:layout_height="1dp"
+                android:layout_marginStart="15dp"
+                android:layout_marginBottom="13dp"
+                android:background="@android:color/darker_gray"
+                android:focusable="false"
+                app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+                app:layout_constraintStart_toStartOf="@+id/linearLayout2" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginTop="490dp"
+                android:clickable="true"
+                android:orientation="vertical"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/transparente">
+
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guideline2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal" />
+
+                    <ImageView
+                        android:id="@+id/imagesync"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginStart="15dp"
+                        android:adjustViewBounds="true"
+                        android:contentDescription="@string/nav_header_desc"
+                        android:cropToPadding="false"
+                        android:paddingTop="@dimen/nav_header_vertical_spacing"
+                        android:scaleType="centerCrop"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_cloudon"
+                        tools:ignore="MissingConstraints" />
+
+                    <TextView
+                        android:id="@+id/textsync"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:fontFamily="More Fonts..."
+                        android:paddingTop="@dimen/nav_header_vertical_spacing"
+                        android:text="@string/sync"
+                        android:textAlignment="viewEnd"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imagesync"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/imagesync"
+                        app:layout_constraintTop_toTopOf="@+id/imagesync"
+                        app:layout_constraintVertical_bias="1.0" />
+
+                    <TextView
+                        android:id="@+id/textbackup"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/backup"
+                        android:textColor="@color/textSecondary"
+                        android:textSize="10sp"
+                        android:visibility="visible"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/textonlinesync"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:text="@string/onlineoffile"
+                        android:textColor="@color/textSecondary"
+                        android:textSize="7sp"
+                        android:visibility="visible"
+                        app:layout_constraintStart_toEndOf="@+id/imagesync"
+                        app:layout_constraintTop_toBottomOf="@+id/textsync" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/transparente">
+
+                    <ImageView
+                        android:id="@+id/imagedarkmode"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_marginStart="15dp"
+                        android:adjustViewBounds="true"
+                        android:contentDescription="@string/nav_header_desc"
+                        android:cropToPadding="false"
+                        android:paddingTop="@dimen/nav_header_vertical_spacing"
+                        android:scaleType="centerCrop"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:srcCompat="@drawable/ic_darkmode"
+                        tools:ignore="MissingConstraints" />
+
+                    <TextView
+                        android:id="@+id/textdarkmode"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="30dp"
+                        android:fontFamily="@font/roboto"
+                        android:paddingTop="@dimen/nav_header_vertical_spacing"
+                        android:text="@string/dark_mode"
+                        android:textAlignment="viewEnd"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        android:textColor="@color/white"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toBottomOf="@+id/imagedarkmode"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/imagedarkmode"
+                        app:layout_constraintTop_toTopOf="@+id/imagedarkmode"
+                        app:layout_constraintVertical_bias="0.0" />
+
+                    <TextView
+                        android:id="@+id/textversion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="100dp"
+                        android:text="@string/version"
+                        android:textColor="@color/textSecondary"
+                        android:textSize="12sp"
+                        android:visibility="visible"
+                        app:layout_constraintStart_toEndOf="@+id/textdarkmode"
+                        app:layout_constraintTop_toBottomOf="@+id/textdarkmode" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.navigation.NavigationView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -31,18 +193,11 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:foreground="@color/transparente"
-            app:layout_constraintBottom_toTopOf="@+id/include2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/appbarambev" />
-
-        <include
-            android:id="@+id/include2"
-            layout="@layout/app_bar_main"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/txtVerTodasReceitas"
